Update names and add font

--- a/html_shopping_cart/index.html
+++ b/html_shopping_cart/index.html
@@ -20,11 +20,11 @@
                 <p class="product__amount">Antal i kurven:</p>
                 <p id="productCount" class="product__count">0</p>
                 <hr class="divider__line">
-                <button id="increment-btn" onclick="addProduct()">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
+                <button id="increment-btn" onclick="addProduct1()">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 -960 960 960" width="18px" fill="#fff"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
                 </button>
-                <button id="decrease-btn" onclick="removeProduct()">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M200-440v-80h560v80H200Z"/></svg>
+                <button id="decrease-btn" onclick="removeProduct1()">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 -960 960 960" width="18px" fill="#e8eaed"><path d="M200-440v-80h560v80H200Z"/></svg>
                 </button>
             </div>
         </article>
