Update total cost

--- a/html_shopping_cart/index.html
+++ b/html_shopping_cart/index.html
@@ -29,12 +29,13 @@
                 </button>
                 <input type="number" id="product1Input" min="0" placeholder="Indtast antal" class="product__input">
                 <button onclick="updateProduct1Amount()" class="input__button">Angiv antal</button>
-                <h3>Samlet pris:
+                <h3 class="product__totalPrice--title">Samlet pris:
                     <span id="product1TotalPrice" class="product__totalPrice"></span>
                 </h3>
             </div>
         </article>
-        <article class="product">
+
+        <!-- <article class="product">
             <h2 class="product__title">SALNÖ</h2>
             <img 
             src="https://www.ikea.com/dk/da/images/products/salnoe-stol-rotting__1224550_pe915021_s5.jpg?f=xl"
@@ -42,7 +43,7 @@
             class="product__img">
             <p class="product__text">Nem at tage med hjem, enkel at samle – og unik. Den behagelige SALNÖ stol med bløde, buede former i håndflettet rotting hjælper dig med at få lidt af naturen ind i dit hjem.</p>
             <p class="product__price">595,-</p>
-        </article>
+        </article> -->
     </div>
     <script src="script.js"></script>
 </body>
