Add 2nd product

--- a/index.html
+++ b/index.html
@@ -39,9 +39,25 @@
             src="https://www.ikea.com/dk/da/images/products/salnoe-stol-rotting__1224550_pe915021_s5.jpg?f=xl"
             alt="Stol, rotting"
             class="product__img">
-            <p class="product__text">Nem at tage med hjem, enkel at samle – og unik. Den behagelige SALNÖ stol med bløde, buede former i håndflettet rotting hjælper dig med at få lidt af naturen ind i dit hjem.</p>
-            <p class="product__price">595,-</p>
-        </article> -->
+            <div class="product__description">
+                <p class="product__text">Nem at tage med hjem, enkel at samle – og unik. Den behagelige SALNÖ stol med bløde, buede former i håndflettet rotting hjælper dig med at få lidt af naturen ind i dit hjem.</p>
+                <p id="product2Price" class="product__price"></p>
+                <p class="product__amount">Antal i kurven:
+                    <span id="product2__amount">0</span> 
+                </p>
+                <hr class="divider__line">
+                <button onclick="addProduct('product2')">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 -960 960 960" width="18px" fill="#fff"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
+                </button>
+                <button onclick="removeProduct('product2')">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 -960 960 960" width="18px" fill="#e8eaed"><path d="M200-440v-80h560v80H200Z"/></svg>
+                </button>
+                <input type="number" id="product2Input" min="0" placeholder="Indtast antal" onkeypress="if(event.key === 'Enter') updateProductAmount('product2', this)"> <!--  "this" refers to the "<input>" element -->
+                <h3 class="product__totalPrice--title">Samlet pris:
+                    <span id="product2__cost" class="product__totalPrice"></span>
+                </h3>
+            </div>
+        </article>
     </div>
     <script src="script.js"></script>
 </body>
