--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
             </div>
         </article>
     </div>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
