--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
             class="product__image"
             id="productImage">
             <p class="product__description"></p>
-            <button onclick="selectColor('white')">Hvid</button>
-            <button onclick="selectColor('black')">Sort</button>
-            <button onclick="selectSize('small')">Small</button>
-            <button onclick="selectSize('medium')">Medium</button>
-            <button onclick="selectSize('large')">Large</button>
-            <p id="productPrice" class="product__price">0</p>
+            <button onclick="white()">Hvid</button>
+            <button onclick="black()">Sort</button>
+            <button onclick="small()">Small</button>
+            <button onclick="medium()">Medium</button>
+            <button onclick="large()">Large</button>
+            <p id="productSize" class="product__size"></p>
+            <p id="productColor" class="product__color"></p>
+            <p id="productPrice" class="product__price"></p>
         </article>
     </section>
     <script src="main.js"></script>
