Attempt fixing if and else statements

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <button onclick="small()">Small</button>
             <button onclick="medium()">Medium</button>
             <button onclick="large()">Large</button>
-            <p id="productSize" class="product__size"></p>
-            <p id="productColor" class="product__color"></p>
-            <p id="productPrice" class="product__price"></p>
+            <p class="product__size">Størrelse: <span id="productSize"></span></p>
+            <p class="product__color">Farve: <span id="productColor"></span></p>
+            <p class="product__price">Pris: <span id="productPrice"></span></p>
         </article>
     </section>
     <script src="main.js"></script>
