Remove unused class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 alt="T-shirt"
                 class="product__image"
                 id="productImage">
-                <p id="productSale" class="product__sale hidden">På tilbud!</p>
+                <p id="productSale" class="product__sale">På tilbud!</p>
             </div>
             <p class="product__description"></p>
             <button onclick="white()">Hvid</button>
