Replace HTML with empty div

--- a/index.html
+++ b/index.html
@@ -7,20 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="products">
-        <h1 class="products__title">Produkter</h1>
-        <article class="product">
-            <img 
-            src="images/black-front.png" 
-            alt="T-shirt" 
-            class="product__image">
-            <h2 class="product__title">
-                <span id="productTitle"></span></h2>
-            <p class="product__price">
-                Pris: <span id="productPrice"></span>
-            </p>
-        </article>
-    </section>
+    <div id="products" class="products"></div>
     <script src="main.js"></script>
 </body>
 </html>
