Add checkbox for product status

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <label class="status">
+        <input type="checkbox" id="status"> Vis kun produkter på lager
+    </label>
     <div id="products" class="products"></div>
     <script src="main.js"></script>
 </body>
