--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 <body>
     <main class="main">
         <h1 class="title">Gumball Cycle Tracker</h1>
-        <section class="gums">
-            <h2 class="gums__title">Active Cycle</h2>
+        <div class="gums">
             <article class="gum">
-                <img 
-                src="media/aftertaste.png" 
-                alt="Gumball" 
-                class="gum__image"
-                id="">
+                <h3 id="gum1__name" class="gum__name"></h3>
+                <img src="media/aftertaste.png" alt="Gumball" class="gum__image" id="gum1__image">
             </article>
-        </section>
+            <article class="gum">
+                <h3 id="gum2__name" class="gum__name"></h3>
+                <img src="media/burned_out.png" alt="Gumball" class="gum__image" id="gum2__image">
+            </article>
+            <article class="gum">
+                <h3 id="gum3__name" class="gum__name"></h3>
+                <img src="media/dead_of_nuclear_winter.png" alt="Gumball" class="gum__image" id="gum3__image">
+            </article>
+        </div>
     </main>
     <script src="main.js"></script>
 </body>
