Unhardcode total amount

--- a/todo_list/index.html
+++ b/todo_list/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <input type="text" id="addTodo" placeholder="Write a todo">
+    <button onclick="addTodo()">Add</button>
     <ul id="list"></ul>
     <button onclick="showMore()">Show more</button>
     <script src="main.js"></script>
