--- a/todo_list/index.html
+++ b/todo_list/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="text" id="addTodo" placeholder="Write a todo">
+    <input type="text" id="newTodo" placeholder="Write a todo" onkeydown="if(event.key === 'Enter') addTodo()">
     <button onclick="addTodo()">Add</button>
     <ul id="list"></ul>
     <button onclick="showMore()">Show more</button>
