--- a/json_cart/index.html
+++ b/json_cart/index.html
@@ -7,20 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="info">
-        <h2>Cart</h2>
-        <div class="info__title"></div>
-    </section>
-    <ul class="products"></ul>
+    <main class="main">
+        <section class="info">
+            <h2>Cart</h2>
+            <div class="info__title"></div>
+            <ul class="products"></ul>
+        </section>
+        <section class="description">
+            <h2>Macbook</h2>
+            <p>Kategori: <span></span></p>
+            <div class="description__images">
+                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
+                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
+                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
+                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
+                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
+                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
+            </div>
+            <p class="description__info">Produktinformationer</p>
+            <p>blahblahblah</p>
+            <p class="description__tag">laptops</p>
+            <p class="description__tag">apple</p>
+        </section>
+    </main>
     <script src="main.js"></script>
-    <section class="description">
-        <p>Kategori: laptops</p>
-        <h2>Macbook</h2>
-        <img src="" alt="">
-        <p class="description__info">Produktinformationer</p>
-        <p>blahblahblah</p>
-        <p class="description__tag">laptops</p>
-        <p class="description__tag">apple</p>
-    </section>
 </body>
 </html>
