Fetch product details from json

--- a/json_cart/index.html
+++ b/json_cart/index.html
@@ -13,21 +13,20 @@
             <div class="info__title"></div>
             <ul class="products"></ul>
         </section>
-        <section class="description">
-            <h2>Macbook</h2>
+        <section class="product">
+            <h2></h2>
             <p>Kategori: <span></span></p>
-            <div class="description__images">
-                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
-                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
-                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
-                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
-                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
-                <img src="https://cdn.dummyjson.com/products/images/vehicle/Charger%20SXT%20RWD/thumbnail.png" alt="">
+            <div class="product__images">
+                <img src="billede.png" alt="">
+                <img src="billede.png" alt="">
+                <img src="billede.png" alt="">
+                <img src="billede.png" alt="">
+                <img src="billede.png" alt="">
+                <img src="billede.png" alt="">
             </div>
-            <p class="description__info">Produktinformationer</p>
-            <p>blahblahblah</p>
-            <p class="description__tag">laptops</p>
-            <p class="description__tag">apple</p>
+            <p style="font-weight: bold;">Produktinformationer</p>
+            <p class="product__description"></p>
+            <ul class="product__tags"></ul>
         </section>
     </main>
     <script src="main.js"></script>
