Add more styling

--- a/json_cart/index.html
+++ b/json_cart/index.html
@@ -8,23 +8,18 @@
 </head>
 <body>
     <main class="main">
-        <section class="info">
-            <h2>Cart</h2>
-            <div class="info__title"></div>
-            <ul class="products"></ul>
+        <section class="cart">
+            <div class="cart__header">
+                <h2>Cart</h2>
+                <div class="header__title"></div>
+            </div>
+            <ul class="cart__products"></ul>
         </section>
         <section class="product">
             <h2></h2>
-            <p>Kategori: <span></span></p>
-            <div class="product__images">
-                <img src="billede.png" alt="">
-                <img src="billede.png" alt="">
-                <img src="billede.png" alt="">
-                <img src="billede.png" alt="">
-                <img src="billede.png" alt="">
-                <img src="billede.png" alt="">
-            </div>
-            <p style="font-weight: bold;">Produktinformationer</p>
+            <p>Category: <span></span></p>
+            <div class="product__images"></div>
+            <p style="font-weight: bold;">Product information</p>
             <p class="product__description"></p>
             <ul class="product__tags"></ul>
         </section>
